--- a/ansible-helper/var.yaml
+++ b/ansible-helper/var.yaml
@@ -1,5 +1,5 @@
 helper:
-  ip_addr: 192.168.7.11
+  ip_addr: 192.168.77.11
   nic: baremetal
 pdns:
   bind: 0.0.0.0
@@ -10,43 +10,114 @@ pdns:
     - base_domain: infra.redhat.ren
       record:
         - name: registry
-          ip_addr: 192.168.7.11
+          ip_addr: 192.168.77.11
         - name: nexus
-          ip_addr: 192.168.7.11
+          ip_addr: 192.168.77.11
         - name: quay
-          ip_addr: 192.168.7.11
+          ip_addr: 192.168.77.11
         - name: quaylab
-          ip_addr: 192.168.7.11
+          ip_addr: 192.168.77.11
+    - base_domain: infra.wzhlab.top
+      record:
+        - name: registry
+          ip_addr: 192.168.77.11
+        - name: nexus
+          ip_addr: 192.168.77.11
+        - name: quay
+          ip_addr: 192.168.77.11
+        - name: quaylab
+          ip_addr: 192.168.77.11
 ntp:
-  server: 192.168.7.11
+  server: 192.168.77.11
 cluster:
-  - base_domain: acm-demo-hub.redhat.ren
+  - base_domain: acm-demo-hub.wzhlab.top
     node:
-      # - ip_addr: 192.168.7.12
-      - ip_addr: 192.168.7.13
+      # - ip_addr: 192.168.77.12
+      - ip_addr: 192.168.77.13
         name: sno-master-01
-      # - ip_addr: 192.168.7.14
-      # - ip_addr: 192.168.7.15
-  - base_domain: acm-demo-one.redhat.ren
+      # - ip_addr: 192.168.77.14
+      # - ip_addr: 192.168.77.15
+  - base_domain: gpu-sno.wzhlab.top
+    node:
+      - ip_addr: 192.168.77.14
+        name: gpu-master-01
+  - base_domain: acm-demo-one.wzhlab.top
     node: 
-      - ip_addr: 192.168.7.22
+      - ip_addr: 192.168.77.22
         name: one-bootstrap
-      - ip_addr: 192.168.7.23
+      - ip_addr: 192.168.77.23
         name: one-master-01
-      - ip_addr: 192.168.7.24
+      - ip_addr: 192.168.77.24
         name: one-master-02
-      - ip_addr: 192.168.7.25
+      - ip_addr: 192.168.77.25
         name: one-master-03
-  - base_domain: acm-demo-two.redhat.ren
+      - ip_addr: 192.168.77.26
+        name: one-worker-01
+  - base_domain: acm-demo-two.wzhlab.top
     node: 
-      - ip_addr: 192.168.7.33
+      - ip_addr: 192.168.77.32
         name: two-bootstrap
-      - ip_addr: 192.168.7.34
+      - ip_addr: 192.168.77.33
         name: two-master-01
-      - ip_addr: 192.168.7.35
+      - ip_addr: 192.168.77.34
         name: two-master-02
-      - ip_addr: 192.168.7.36
+      - ip_addr: 192.168.77.35
         name: two-master-03
+  - base_domain: osp-demo.wzhlab.top
+    node: 
+      - ip_addr: 192.168.77.43
+        name: osp-bootstrap
+      - ip_addr: 192.168.77.44
+        name: osp-master-01
+      - ip_addr: 192.168.77.45
+        name: osp-master-02
+      - ip_addr: 192.168.77.46
+        name: osp-master-03
+  - base_domain: factory.wzhlab.top
+    node:
+      - ip_addr: 192.168.12.22
+        name: bootstrap
+      - ip_addr: 192.168.12.23
+        name: master-02
+      - ip_addr: 192.168.12.24
+        name: master-02
+      - ip_addr: 192.168.12.25
+        name: master-03
+  - base_domain: edge01.wzhlab.top
+    node:
+      - ip_addr: 192.168.12.33
+        name: sno-master
+    # below set for hypershift lab
+    # api:
+    #   - ip_addr: 192.168.12.23
+    #   - ip_addr: 192.168.12.24
+    #   - ip_addr: 192.168.12.25
+    # below set for factor lab
+    # api:
+    #   - ip_addr: 192.168.12.33
+    api_int:
+      - ip_addr: 192.168.12.34
+    apps:
+      - ip_addr: 192.168.12.35
+  - base_domain: edge02.wzhlab.top
+    node:
+      - ip_addr: 192.168.12.43
+        name: sno-master
+  - base_domain: edge03.wzhlab.top
+    node:
+      - ip_addr: 192.168.12.53
+        name: sno-master
+    api:
+      - ip_addr: 192.168.12.23
+      - ip_addr: 192.168.12.24
+      - ip_addr: 192.168.12.25
+    apps:
+      - ip_addr: 192.168.12.23
+      - ip_addr: 192.168.12.24
+      - ip_addr: 192.168.12.25 
+
 ptr: 
-  - addr: 192.168.7
-    domain: ptr.redhat.ren
+  - addr: 192.168.77
+    domain: ptr.wzhlab.top
+  - addr: 192.168.12
+    domain: ptr.wzhlab.top
